--- a/app/src/main/res/layout/recycler_device_item.xml
+++ b/app/src/main/res/layout/recycler_device_item.xml
@@ -8,5 +8,5 @@
         android:id="@+id/tvName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp" />
+        android:layout_margin="10dp" />
 </LinearLayout>
